--- a/src/sass/organisms/_video.sass
+++ b/src/sass/organisms/_video.sass
@@ -8,7 +8,8 @@
         +font-size(60px)
         font-weight: 700;
         text-transform: uppercase;
-        margin: 60px 0 20px
+        //margin: 60px 0 20px
+        padding: 60px 0 10px
         width: 100%
         color: #646363;
         
