--- a/src/sass/organisms/_gallery.sass
+++ b/src/sass/organisms/_gallery.sass
@@ -9,13 +9,24 @@
                 display: none
     
     #lightSlider
+        /*Video*/
         a
             img
                 width: 100%  
                 
-        li        
-            img
-                width: 100%
+        /*Fotos*/        
+        li  
+            a
+                
+                img
+                    width: 100%
+                    opacity: 0
+
+                .loaded
+                    opacity: 1
+                    transition: opacity 1s
+                
+                
                 
                 
 //celular
